# nrem_sc

./: .gitignore  README.md  demo_trajectory_viewer.py  detect_sweeps_demo.py  fastplot_isomap.py  fastplot_post_ttx.py  fastplot_umap.py  layout_2026-01-14_18-54.json  manifold_sync_example.py  manifold_sync_example_3d.py  manifold_synchronized.py  manifold_viewer.py  manifold_viewer_3d_fps.py  nrem_manifold_post-ttx.py  pyproject.toml  test_playback.py  test_pygfx.py  test_trail_2d.py  test_trail_3d.py  trajectory.py  trajectory2.py  trajectoryViewer.py  trajectory_csv_2d.py  trajectory_test.ipynb  viz_burst.py  viz_manifold.py
notebooks/: analyze_decoded_states.ipynb  chaos.ipynb  circstats.ipynb  classify_states.ipynb  dual_recordings.ipynb  manifold_post.ipynb  nrem_burst_analysis.ipynb  nrem_manifold_post-ttx.ipynb  nrem_manifold_pre-ttx.ipynb  pre_process.ipynb  preprocess.ipynb  preprocess_107b.ipynb  process_raw_data.ipynb  replay_trajectory.ipynb  replay_trajectory_parameter_tuning.ipynb  select_hd_cells.ipynb  tuning_curves.ipynb  visualize_decoded_states.ipynb
quest/: decode_hpc.py  decode_job.sh  decode_job_116b.sh  env.txt  env.yaml
scripts/: audio_analyzer.py  classify_states.py  extract_from_matlab.m  eye_pupil_analysis.ipynb  fastplot_nrem_3d.py  fastplot_umap.py  load_data.ipynb  manifold_structure.ipynb  manifold_sync_combined_umap.py  manifold_sync_example_3d.py  manifold_synchronized.py  manifold_viewer_3d_fps.py  manifold_viz.ipynb  manifold_viz107.ipynb  map_screen_to_world.py  nrem_manifold_post-ttx.ipynb  nrem_manifold_pre-ttx.ipynb  process_raw_data.ipynb  replay_decode.py  replay_trajectory.ipynb  test_playback.py  test_trail_2d.py  test_trail_3d.py  trajectoryViewer.py  trajectory_csv_2d.py  (+7 more)
(+28 files in other folders)
