[project]
name = "nrem-sc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.9.0",
    "jupyter>=1.1.1",
    "pynapple>=0.10.2",
    "pynaviz>=0.1.2",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.9.post2",
]
