[project]
name = "nrem-sc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.9.0",
    "jupyter>=1.1.1",
    "pynapple>=0.10.2",
    "pynaviz[qt]>=0.1.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "pyside6>=6.10.2",
    "imageio>=2.37.2",
    "cmap>=0.7.1",
    "pygfx>=0.15.3",
    "pandas<3.0",
    "replay-trajectory-classification>=1.4.1",
    "fastplotlib>=0.6.1",
    "pycircstat2>=0.1.15",
]

[dependency-groups]
dev = [
    "nrem-sc",
]

[tool.uv.sources]
nrem-sc = { workspace = true }
